--- a/web/package.json
+++ b/web/package.json
@@ -9,20 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.90.1",
     "lucide-react": "^0.562.0",
     "next": "14.2.4",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "20.11.30",
-    "@types/react": "18.2.73",
-    "@types/react-dom": "18.2.23",
+    "@types/node": "20.19.29",
+    "@types/react": "18.3.27",
+    "@types/react-dom": "^18.2.23",
     "autoprefixer": "10.4.18",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
     "postcss": "8.4.35",
     "tailwindcss": "3.4.1",
-    "typescript": "5.4.5"
+    "typescript": "5.9.3"
   }
 }
