Feat: Migrate Platform Checkout to Ruby Backend

--- a/netlify.toml
+++ b/netlify.toml
@@ -18,3 +18,8 @@
   from = "/profiles/*"
   to = "https://vasta-ruby-antigravity.onrender.com/profiles/:splat"
   status = 200
+
+[[redirects]]
+  from = "/platform/*"
+  to = "https://vasta-ruby-antigravity.onrender.com/platform/:splat"
+  status = 200
