--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "pages:build": "npx @cloudflare/next-on-pages",
     "start": "next start",
     "lint": "next lint"
   },
@@ -19,7 +20,7 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "lucide-react": "^0.562.0",
-    "next": "14.2.4",
+    "next": "^14.3.0",
     "next-themes": "^0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -27,11 +28,12 @@
   },
   "devDependencies": {
     "@types/node": "20.19.29",
+    "@cloudflare/next-on-pages": "^1.0.0",
     "@types/react": "18.3.27",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "^14.3.0",
     "postcss": "^8.4.35",
     "tailwindcss": "3.4.1",
     "typescript": "5.9.3"
