--- a/web/package.json
+++ b/web/package.json
@@ -20,7 +20,7 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "lucide-react": "^0.562.0",
-    "next": "^14.3.0",
+    "next": "latest",
     "next-themes": "^0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -33,7 +33,7 @@
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.3.0",
+    "eslint-config-next": "latest",
     "postcss": "^8.4.35",
     "tailwindcss": "3.4.1",
     "typescript": "5.9.3"
