feat: Add initial `package.json` and `wrangler.toml` for the `vasta-web` Next.js project.

--- a/web/wrangler.toml
+++ b/web/wrangler.toml
@@ -1,8 +1,7 @@
 name = "vasta-web"
-main = ".open-next/worker.js"
+pages_build_output_dir = ".open-next/assets"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
-assets = { directory = ".open-next/assets", binding = "ASSETS" }
 
 # [[kv_namespaces]]
 # binding = "NEXT_CACHE_WORKERS_KV"
