--- a/web/package.json
+++ b/web/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "build-next": "next build",
-    "pages:build": "npx @opennextjs/cloudflare",
+    "pages:build": "npx @opennextjs/cloudflare build",
     "start": "next start",
     "lint": "next lint"
   },
