--- a/web/package.json
+++ b/web/package.json
@@ -33,12 +33,12 @@
     "@types/node": "^25.0.9",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.23",
     "esbuild": "^0.27.2",
     "eslint": "^9.0.0",
     "eslint-config-next": "^16.1.3",
-    "postcss": "^8.4.35",
-    "tailwindcss": "3.4.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "typescript": "5.9.3"
   }
 }
