--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "next": "^16.1.4",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.2.3",
     "react-easy-crop": "^5.5.6",
     "stripe": "^20.2.0"
